--- a/.env.example
+++ b/.env.example
@@ -10,7 +10,7 @@ DB_HOST=127.0.0.1
 DB_PORT=3306
 DB_DATABASE=apintegrada
 DB_USERNAME=root
-DB_PASSWORD=Xj9Ace3O9X
+DB_PASSWORD=""
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
